# ngbem

./: .buildinfo  .gitignore  CMakeLists.txt  Helmholtz_Formulations.html  LICENSE  Laplace_Formulations.html  Maxwell_Formulations.html  README.md  bem.html  genindex.html  ho_cvg.html  intro.html  markdown-notebooks.html  markdown.html  ngsolve_addon.cmake  notebooks.html  objects.inv  pyproject.toml  readme.txt  search.html  searchindex.js  setup.py  spaces.html
_sources/: Helmholtz_Formulations.md  Laplace_Formulations.md  Maxwell_Formulations.md  bem.md  ho_cvg.md  intro.md  spaces.md
_sources/demos/: DtN_direct.ipynb  FEMBEM_Capacitor.ipynb  Laplace_DtN_direct.ipynb  Laplace_DtN_indirect.ipynb  Laplace_Mixed.ipynb  Laplace_NtD_direct.ipynb  Laplace_NtD_indirect.ipynb  Maxwell_DtN_direct.ipynb  Maxwell_DtN_indirect.ipynb
_sources/short_and_sweet/: Helmholtz_Formulations.md  Laplace_Demo_1.ipynb  Laplace_Demo_3.ipynb  Maxwell_Demo_1.ipynb  Maxwell_Demo_2.ipynb  why_bem.md
complex_aca/ACA/: MatElement.c  PartialACA.c  PartialGACA.c  PostCompression.c
complex_aca/BasisElement/: JoinSets.c
complex_aca/BasmodC/: dset.c  lmax.c  lmin.c  lset.c  max.c  min.c  zset.c
complex_aca/CInclude/: BElement.h  Cell.h  ComplexACA.h  ExternVariables.h  GlobalIncludes.h  GlobalVariables.h  Includes.h  IncludesMain.h  LocalIncludes.h  Prototype.h  cblas.h
complex_aca/Clusters/: AdmissibleBlocks.c  AdmissiblePair.c  ClusterPairs.c  ClusterPoint.c  ClusterTree.c  DevideCluster.c  GClusterTree.c  GDevideCluster.c  KappaAdmissiblePair.c  MTVPrintCluster.c  ParaViewPair.c  PrintCluster.c  PrintClusterInfo.c  PrintGClusterInfo.c  SymmClusterPairs.c
complex_aca/Geometry/: DVecPr.c  ElementInfo.c  FindNodeNeighbours.c  PLineDist.c  PPPAngle.c  ReadDimension.c  ReadGeometry.c  ReadPointSet.c
complex_aca/HLA/: HAToD.c  HAToH.c  HCheckM.c  HCopyM.c  HCountLUM.c  HDToA.c  HDToH.c  HFreeM.c  HGetLU.c  HHToD.c  HInfoM.c  HIniM.c  HJoinDenseH.c  HJoinDenseV.c  HMemM.c  HMultMM.c  HNToD.c  HNormM.c  HScalM.c  HSolveLULeft.c  HSolveLURight.c  HSplitDenseH.c  HSplitDenseV.c  HSumMM.c
complex_aca/HMatrix/: BlockHMatrixMult.c  Element11.c  Element12.c  FreeBlockHMatrix.c  FreeHMatrix.c  GHMatrixMult.c  GenBlock.c  GenElement.c  GenGBlock.c  GenGHMatrix.c  GenHMatrix.c  GetBlockHMatrix.c  GetGHMatrix.c  GetHMatrix.c  HMatrixMult.c  SaveCSymHMatrix.c  SaveHMatrix.c
complex_aca/Input/: ReadInputFile.c
complex_aca/Linker/: aca_init.c  aca_init_precond.c  aca_solve.c  maca_init.c  maca_solve.c  maca_solve_fs.c  maca_test.c
complex_aca/Linker/notused/: ComplexACA.c
complex_aca/MACA/: PartialMACA.c
complex_aca/MHMatrix/: DC_TO_DCG.c  GenMBlock.c  GenMElement.c  GenMHMatrix.c  GetMHMatrix.c  GetSPMatrix.c
complex_aca/SaadILUGMRES/: zdefs.h  zgmres.c  zgmres1.c  zgmres1.h  zheads.h  ziluk.c  zlusolC.c  zprotos.h  zsets.c
complex_aca/Solver/: BHMatrixToBlock.c  BlockHLUSolveMM.c  BlockHMatrixMultZ.c  BlockMHMatrixMultZ.c  BlockMHMatrixMultZ_fs.c  BlockPrePrecond.c  BlockToSolution.c  GMResPrint.c  GetBlockSparseStructure.c  GetSparseStructure.c  HLUSolveMM.c  HMatrixMult2R.c  HMatrixMultZ.c  PointerListToBlock.c  PrePrecond.c  RHSToBlock.c  SolveTriDiag.c  SparseRowMult.c  WriteSparseMatrix.c  iccsolvers.c  iccsolvers.h  iccsolvers.tgz  zgmres1.h
complex_aca/Solver/iccsolvers/: iccsolvers.c  makefile  test_iccgmres  test_iccgmres.c  test_zgmres1.c  zgmres1.c
complex_aca/Solver/notused/: H4x4Block.c  HHHHBlock.c  HHNNBlock.c  HNN1Block.c  HNNN4x4Block.c
complex_aca/not_used/: Cluster.h
demos/: .doublelayer.py.swp  .singlelayer.py.swp  BEM_Antenna.ipynb  BEM_Capacitor.ipynb  BEM_Laplace_Capacitor.ipynb  DtN.ipynb  DtN_direct.html  DtN_direct.ipynb  DtN_indirect.ipynb  FEMBEM.ipynb  FEMBEM_Capacitor.html  FEMBEM_Capacitor.ipynb  FEMBEM_Laplace_Capacitor.ipynb  FEMBEM_Maxwell_Antenna.ipynb  HelmholtzBurtonMiller.ipynb  Laplace_Convergence.py  Laplace_DtN_direct.html  Laplace_DtN_direct.ipynb  Laplace_DtN_indirect.html  Laplace_DtN_indirect.ipynb  Laplace_FEMBEM.ipynb  Laplace_Mixed.html  Laplace_Mixed.ipynb  Laplace_NtD_direct.html  Laplace_NtD_direct.ipynb  Laplace_NtD_indirect.html  Laplace_NtD_indirect.ipynb  Maxwell_DtN_direct.html  Maxwell_DtN_direct.ipynb  Maxwell_DtN_direct_New.ipynb  Maxwell_DtN_indirect.html  Maxwell_DtN_indirect.ipynb  Maxwell_MFIE.ipynb  Maxwell_Mie_Convergence.py  Maxwell_Mixed.html  Maxwell_Mixed.ipynb  Maxwell_NtD_indirect.ipynb  Maxwell_Ship.ipynb  coupling.py  doublelayer.py  (+6 more)
demos/.ipynb_checkpoints/: DtN-checkpoint.ipynb  Maxwell_DtN_direct_New-checkpoint.ipynb
demos/stl/: ship_1.stl
docs/ngbem/: Laplace_Formulations.md  Maxwell_Formulations.md  _config.yml  _toc.yml  ho_cvg.md  intro.md
docs/ngbem/_build/html/demos/: Laplace_NtD_direct.html  Laplace_NtD_indirect.html  Maxwell_DtN_indirect.html  Maxwell_NtD_indirect.html
docs/ngbem/demos/: DtN_direct.ipynb  FEMBEM_Capacitor.ipynb  Laplace_DtN_direct.ipynb  Laplace_DtN_indirect.ipynb  Laplace_Mixed.ipynb  Laplace_NtD_direct.ipynb  Laplace_NtD_indirect.ipynb  Maxwell_DtN_direct.ipynb  Maxwell_DtN_indirect.ipynb  Maxwell_Mixed.ipynb
docs/ngbem/short_and_sweet/: Laplace_Demo_2.ipynb  Laplace_Formulations.md  Maxwell_Demo_2.ipynb  Maxwell_Formulations.md  ho_cvg.md
short_and_sweet/: Helmholtz_Formulations.html  Laplace_Demo_1.html  Laplace_Demo_2.html  Laplace_Demo_3.html  Laplace_Formulations.html  Maxwell_Demo_2.html  Maxwell_Formulations.html  ho_cvg.html  why_bem.html
src/: .ngbem.cpp.swo  __init__.py  diffops.hpp  fmmoperator.hpp  hmat.cpp  hmat.hpp  intrules.cpp  intrules.hpp  ngbem.cpp  ngbem.hpp  python_bem.cpp  test_compression.cpp  test_compression.hpp
tests/: Laplace_Convergence.py  Maxwell_Mie_Convergence.py  mie.cpp  test_DLIntegration.py  test_FEMBEM_sphere.py  test_Laplace.py  test_Maxwell_Box.py  test_Maxwell_Mie.py  test_SLIntegration.py  test_SLLaplace.py  test_aca.py
