# Here is the project metadata, adapt it to your needs
[project]
name = "ngbem"
version = "1.0.0"
description="A Boundary Element Method library for NGSolve"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [] # ngsolve will be added automatically
dynamic = ["dependencies"]
authors = [
  {name = "L. Weggler"},
  {name = "D. Seibel"},
  {name = "J Schöberl"},
]
classifiers = [
  "License :: OSI Approved :: MIT License",
]

# Update NGSolve when you rely on newer features, but keep the '>=' to allow also newer versions
# Maybe you also need to add other requirements to build your package
[build-system]
requires = ["ngsolve>=6.2.2404.post16", "scikit-build-core>=0.9.0", "pybind11_stubgen", "cmake"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
experimental = true
# This adds ngsolve (with exact build-time version) to the dependencies
metadata.dependencies.provider="ngsolve._scikit_build_core_dependencies"
